# key_server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  vercel.json
api/: index.py
app/: __init__.py  auth.py  config.py  crypto.py  db.py  main.py  models.py  templates.py
scripts/: build.sh
static/: app.js  style.css
templates/: dashboard.html  login.html
