[project]
name = "key-server"
version = "1.0.0"
description = "自托管的密钥管理服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.22",
    "python-multipart==0.0.20",
    "jinja2==3.1.5",
    "itsdangerous==2.2.0",
    "cryptography==44.0.0",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = []

[tool.vercel]
include-files = ["app/**", "templates/**", "static/**"]